# atlas

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.agents/skills/atlas/: SKILL.md
.agents/skills/atlas/prompts/: claude.system.md  full.md  openai.developer.md
.agents/skills/atlas/references/: data-model.md  mcp-tools.md  rest-api.md
.cursor/: mcp.json
.cursor/rules/: toon-context.mdc
.cursor/skills/atlas-api/: SKILL.md
.cursor/skills/atlas-deploy/: SKILL.md
.cursor/skills/atlas-explorer/: SKILL.md
.cursor/skills/atlas-indexer/: SKILL.md
.cursor/skills/atlas-mcp/: SKILL.md
.cursor/skills/toon-context-workflow/: SKILL.md
apps/explorer/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/explorer/src/app/: globals.css  layout.tsx  page.tsx
apps/explorer/src/app/address/[addr]/: page.tsx
apps/explorer/src/app/api/atlas/[...path]/: route.ts
apps/explorer/src/app/block/[slot]/: page.tsx
apps/explorer/src/app/stats/: page.tsx
apps/explorer/src/app/trace/[address]/: page.tsx
apps/explorer/src/app/tx/[sig]/: page.tsx
apps/explorer/src/components/: ActionCard.tsx  CopyButton.tsx  ExplainPanel.tsx  Nav.tsx  TagBadge.tsx  TokenDeltaTable.tsx  TxActions.tsx  TxHistoryList.tsx  WalletScoreBadge.tsx
apps/explorer/src/components/stats/: ClientDistribution.tsx  EpochCard.tsx  RecentBlocks.tsx  StatCard.tsx  TpsChart.tsx  ValidatorTable.tsx
apps/explorer/src/components/trace/: TraceGraph.tsx  TraceSidebar.tsx  WalletNode.tsx  types.ts
apps/explorer/src/components/ui/: Skeleton.tsx
apps/explorer/src/lib/: api.ts  atlasRpc.ts
config/: entities.yml  programs.yml  spam.yml  tags.yml
config/atlas-skill/: SKILL.md
crates/atlas_alerter/: Cargo.toml
crates/atlas_alerter/src/: main.rs
crates/atlas_api/: Cargo.toml
crates/atlas_api/src/: broadcast.rs  error.rs  explain.rs  main.rs  middleware.rs  negotiate.rs  rpc.rs  state.rs
crates/atlas_api/src/handlers/: account.rs  address.rs  batch.rs  block.rs  context.rs  das.rs  docs.rs  health.rs  intel.rs  keys.rs  mcp.rs  mod.rs  openapi.json  pulse.rs  related.rs  sender.rs  stream.rs  token.rs  trace.rs  tx.rs  wallet.rs  webhooks.rs
crates/atlas_cli/: Cargo.toml
crates/atlas_cli/src/: main.rs
crates/atlas_cli/src/cmd/: block.rs  keygen.rs  keys.rs  mod.rs  pulse.rs  rpc.rs  status.rs  stream.rs  token.rs  tx.rs  usage.rs  wallet.rs
crates/atlas_common/: Cargo.toml
crates/atlas_common/src/: auth.rs  config.rs  error.rs  lib.rs  logging.rs  metrics.rs  redis_ext.rs
crates/atlas_indexer/: Cargo.toml
crates/atlas_indexer/src/: backfill.rs  checkpoint.rs  das.rs  db.rs  gap_detector.rs  grpc_conv.rs  main.rs  shred_consumer.rs  stream.rs  token_meta.rs  webhook_worker.rs
crates/atlas_intel/: Cargo.toml
crates/atlas_intel/src/: features.rs  main.rs  scores.rs  store.rs  trigger.rs
crates/atlas_parser/: Cargo.toml
crates/atlas_parser/src/: config.rs  deltas.rs  lib.rs  module.rs  parser.rs  spam.rs  tags.rs
crates/atlas_parser/src/modules/: compute_budget.rs  deploy_detect.rs  mint_burn.rs  mod.rs  nft_ops.rs  stake_ops.rs  swap_detect.rs  system_transfer.rs  token_transfer.rs
crates/atlas_shredstream/: Cargo.toml
crates/atlas_shredstream/src/: frame.rs  main.rs  publisher.rs  receiver.rs
crates/atlas_toon/: Cargo.toml
crates/atlas_toon/src/: lib.rs  render.rs  table.rs
crates/atlas_types/: Cargo.toml
crates/atlas_types/src/: cursor.rs  facts.rs  intelligence.rs  lib.rs  raw.rs  webhook.rs
crates/atlas_webhooks/: Cargo.toml
crates/atlas_webhooks/src/: delivery.rs  listener.rs  main.rs  matcher.rs  worker.rs
docs/: API.md  ARCHITECTURE.md  INTELLIGENCE.md  OPERATIONS.md  TOON.md
infra/: Dockerfile.rust  docker-compose.serverB.yml
infra/grafana/: atlas-dashboard.json  prometheus.yml
infra/migrations/: 001_tx_store.sql  002_address_index.sql  003_token_owner_map.sql  004_token_balance_index.sql  005_program_activity_index.sql  006_webhook_subscriptions.sql  007_webhook_deliveries.sql  008_intelligence_wallet_profiles.sql  009_intelligence_wallet_edges.sql  010_indexer_state.sql  011_webhook_api_key.sql  012_asset_index.sql  013_entity_labels.sql  014_accounts.sql  015_token_metadata.sql  016_api_keys_mgmt.sql
infra/monitoring/: docker-compose.yml
infra/monitoring/grafana/provisioning/dashboards/: atlas.yml
infra/monitoring/prometheus/: prometheus.yml
infra/nginx/: nginx.conf
infra/systemd/: atlas-api.service  atlas-indexer.service  atlas-intel.service  atlas-webhooks.service
plugins/atlas-geyser-v2/: Cargo.toml  README.md  config.example.json
plugins/atlas-geyser-v2/src/: config.rs  lib.rs  metrics_stub.rs  plugin.rs  token.rs  worker.rs
