[workspace]
resolver = "2"
members = [
    "crates/atlas_types",
    "crates/atlas_common",
    "crates/atlas_toon",
    "crates/atlas_parser",
    "crates/atlas_indexer",
    "crates/atlas_api",
    "crates/atlas_webhooks",
    "crates/atlas_intel",
    "crates/atlas_shredstream",
    "crates/atlas_cli",
    "crates/atlas_alerter",
]

# The Geyser plugin (plugins/atlas-geyser-v2) is intentionally excluded from
# the workspace because it pins agave-geyser-plugin-interface = "=2.2.19"
# which conflicts with the indexer's Solana dependency tree.
# Build it separately: cd plugins/atlas-geyser-v2 && cargo build --release
exclude = ["plugins/atlas-geyser-v2"]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Atlas Team"]
license     = "MIT"

[workspace.dependencies]
# async runtime
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures      = "0.3"
async-trait  = "0.1"

# web / gRPC
axum         = { version = "0.7", features = ["macros", "ws"] }
axum-extra   = { version = "0.9", features = ["typed-header"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
tonic        = { version = "0.11", features = ["tls", "tls-roots"] }
prost        = "0.12"
prost-types  = "0.12"
reqwest      = { version = "0.12", features = ["json", "rustls-tls"] }

# serde / data
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"

# database
sqlx         = { version = "0.7", features = [
    "postgres", "runtime-tokio-native-tls",
    "uuid", "chrono", "rust_decimal", "json", "macros"
] }

# redis
redis        = { version = "0.24", features = ["tokio-comp", "connection-manager", "streams"] }

# crypto / auth
hmac         = "0.12"
sha2         = "0.10"
hex          = "0.4"
uuid         = { version = "1", features = ["v4", "serde"] }
rand         = "0.8"
base64       = "0.22"

# observability
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["env-filter", "json"] }
metrics                     = "0.22"
metrics-exporter-prometheus = "0.13"

# config / cli
config  = "0.14"
clap    = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# util
anyhow       = "1"
thiserror    = "1"
chrono       = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
bytes        = "1"
once_cell    = "1"
regex        = "1"
bs58         = "0.5"
itertools    = "0.12"
dashmap      = "5"
parking_lot  = "0.12"

# Yellowstone gRPC (local path to existing repo)
yellowstone-grpc-proto  = { path = "/root/yellowstone-grpc/yellowstone-grpc-proto" }
yellowstone-grpc-client = { path = "/root/yellowstone-grpc/yellowstone-grpc-client" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level = 1
