[package]
name    = "atlas_common"
version.workspace = true
edition.workspace = true

[dependencies]
atlas_types = { path = "../atlas_types" }

serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
tokio       = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
config      = { workspace = true }
dotenvy     = { workspace = true }
tracing                  = { workspace = true }
tracing-subscriber       = { workspace = true }
metrics                  = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
redis       = { workspace = true }
sqlx        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
once_cell   = { workspace = true }
chrono      = { workspace = true }
