[package]
name    = "atlas_parser"
version.workspace = true
edition.workspace = true

[dependencies]
atlas_types = { path = "../atlas_types" }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
once_cell   = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }
regex       = { workspace = true }
base64      = { workspace = true }
