[package]
name        = "atlas-geyser"
version     = "0.1.0"
edition     = "2021"
description = "Atlas Geyser plugin — streams account state into Atlas PostgreSQL schema (geyser_accounts + token_owner_map)."
license     = "Apache-2.0"

[lib]
name       = "atlas_geyser"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck          = "1.12.1"
crossbeam-channel = "0.5.7"
hex               = "0.4"
log               = "0.4"
serde             = "1.0"
serde_derive      = "1.0"
serde_json        = "1.0"
thiserror         = "2.0"

# postgres sync driver — zero async overhead, keeps worker threads simple
postgres       = { version = "0.19", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2",  features = ["derive"] }

# Geyser ABI must match the running Tachyon v2.2.19 validator exactly.
agave-geyser-plugin-interface = "=2.2.19"
solana-sdk                    = "=2.2.2"
solana-logger                 = "=2.3.1"


[profile.release]
opt-level    = 3
lto          = "thin"
codegen-units = 1
